[gd_scene load_steps=9 format=3 uid="uid://i1jql72x1fte"]

[ext_resource type="Script" uid="uid://c3mxbyeeux1v1" path="res://scenes/DialogueUI/AskPopup.gd" id="1_jk00t"]
[ext_resource type="Script" uid="uid://pwyh8365is28" path="res://addons/icons-fonts/nodes/FontIconButton.gd" id="4_cwsf0"]
[ext_resource type="Script" uid="uid://diswvoymuh7fq" path="res://addons/icons-fonts/resources/FontIconSetting.gd" id="5_s1dce"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uk675"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.1, 0.1, 0.1, 0.6)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="Resource" id="Resource_ebuem"]
script = ExtResource("5_s1dce")
icon_font = "MaterialIcons"
icon_name = "check-circle-outline"
icon_size = 22
icon_color = Color(1, 1, 1, 1)
outline_color = Color(1, 1, 1, 1)
outline_size = 0
shadow_color = Color(1, 1, 1, 1)
shadow_size = 0
shadow_offset = Vector2(0, 0)

[sub_resource type="LabelSettings" id="LabelSettings_wdrhs"]

[sub_resource type="Resource" id="Resource_cwsf0"]
script = ExtResource("5_s1dce")
icon_font = "MaterialIcons"
icon_name = "skip-next"
icon_size = 22
icon_color = Color(1, 1, 1, 1)
outline_color = Color(1, 1, 1, 1)
outline_size = 0
shadow_color = Color(1, 1, 1, 1)
shadow_size = 0
shadow_offset = Vector2(0, 0)

[sub_resource type="LabelSettings" id="LabelSettings_s1dce"]

[node name="AskPopup" type="PanelContainer" node_paths=PackedStringArray("line_edit") groups=["show"]]
self_modulate = Color(1, 1, 1, 0.5)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -288.0
offset_top = -90.0
offset_right = 288.0
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 6
script = ExtResource("1_jk00t")
line_edit = NodePath("MarginContainer/VBoxContainer/LineEdit")
procent_size = Vector2(30, 10)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Default answer"
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ConfirmButton" type="PanelContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_uk675")
script = ExtResource("4_cwsf0")
icon_settings = SubResource("Resource_ebuem")
label_text = "Confirm"
label_settings = SubResource("LabelSettings_wdrhs")
metadata/_custom_type_script = "uid://pwyh8365is28"

[node name="SkipButton" type="PanelContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_uk675")
script = ExtResource("4_cwsf0")
icon_settings = SubResource("Resource_cwsf0")
label_text = "Skip"
label_settings = SubResource("LabelSettings_s1dce")
metadata/_custom_type_script = "uid://pwyh8365is28"

[connection signal="text_submitted" from="MarginContainer/VBoxContainer/LineEdit" to="." method="_on_text_submitted"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/ConfirmButton" to="." method="_on_ok_btn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/SkipButton" to="." method="_on_default_answer_btn_pressed"]
